--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,25 @@
             <version>${spring-kafka.version}</version>
         </dependency>
 
+        <!-- Compile-time dependencies: -->
+        <dependency>
+            <groupId>com.stormpath.spring</groupId>
+            <artifactId>stormpath-default-spring-boot-starter</artifactId>
+            <version>${stormpath.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Camel Dependencies-->
         <dependency>
             <groupId>org.apache.camel</groupId>
@@ -62,6 +81,9 @@
         <java.version>1.8</java.version>
         <spring-kafka.version>1.1.1.RELEASE</spring-kafka.version>
         <camel-version>2.17.0</camel-version>
+        <logback.version>1.1.7</logback.version>
+        <slf4j.version>1.7.21</slf4j.version>
+        <stormpath.version>1.2.1</stormpath.version>
     </properties>
 
 
